# bagl

./: .gitignore  README.md
haskell/: CHANGELOG.md  README.md  bagl.cabal  package.yaml  stack  test.bagl
haskell/app/: Main.hs
haskell/src/: Addr.hs  Assoc.hs  Core.hs  GMStats.hs  Heap.hs  Lib.hs  Parse.hs  Pretty.hs
python/: Core.py  Expr.py  ExprDB.py  bagl.py  generate_code.py  main.py  test.bagl  test2.bagl
python/Core/: Eval.py  Expr.py  Print.py  Visitor.py
python/Parse/: Lexer.py  Parse.py  ParserCombinator.py  Scanner.py  Token.py  TokenType.py
python/Representation/: Convert.py  Expr.py  Print.py  Visitor.py
python/Toaster/: Convert.py  Expr.py  Parse.py  Tokens.py
rust/: Cargo.toml  blah.bagl  example.bagl  test.bagl
rust/src/: ast.rs  builtin.rs  builtins.rs  check.rs  core.rs  either.rs  env.rs  environment.rs  eval.rs  expr.rs  gram.lalrpop  info.rs  main.rs  parse.rs  rearrange.rs  scan.rs  typecheck.rs
rust/src/parse/: lexer.rs
rust/src/pretty/: mod.rs  pretty.rs  pretty_core.rs
