[package]
name = "bagl"
version = "0.1.0"
authors = ["Ben Pski <ben@pepski.com>"]
edition = "2018"
build = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"
itertools = "0.12.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
regex = "0.2.1"
num = "0.2.1"
itertools = "0.12.0"
